second-commit-trying-versioning

--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.3",
   "description": "JS library for DOM manipulation",
   "main": "index.mjs",
-  "scripts": {
-    "publish": "npm publish --access public"
-  },
+  "scripts": {},
   "keywords": [
     "javascript",
     "HTML",
