--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.mjs",
   "scripts": {
     "test": "echo 'No tests specified'",
-    "deploy": "np patch --preview"
+    "deploy": "np patch"
   },
   "keywords": [
     "javascript",
